<resources>
    <string name="app_name">AGTR</string>
    <string name="title_login">Login</string>
    <string name="login_username">User Name</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="qr_barcode">QR/Barcode Scan</string>
    <string name="nfc">NFC Scan</string>
    <string name="updates">Updates</string>
    <string name="organisation">Organisation</string>
    <string name="role">Role</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="asset">Asset</string>
    <string name="title_activity_latest_updates">LatestUpdatesActivity</string>
    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="asset_details">Asset Details</string>
    <string name="role_details">Role Details</string>
    <string name="asset_name">Asset Name</string>
    <string name="asset_description">Asset Description</string>
    <string name="scan_code">Scan Code</string>
    <string name="scan_type">Select Scan Type</string>
    <string name="scan_type1">Barcode Scan</string>
    <string name="scan_type2">QR Scan</string>
    <string name="scan_type3">NFC Scan</string>
    <string name="owner_name">Owner Name</string>
    <string name="employee_name">Employee Name</string>
    <string name="submit_asset">Submit Asset</string>
    <string name="toggle_in">IN</string>
    <string name="toggle_out">OUT</string>
    <string name="mark_status">MARK STATUS</string>
    <string name="organisation_details">Organisation Details</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="branch_name">Branch Name</string>
    <string name="address">Address</string>
    <string name="is_parent_organisation">Is Parent Organisation</string>
    <string name="select_parent">Select Parent Organisation</string>
    <string name="select_organisation">Select Organisation</string>
    <string name="submit_organisation">Submit Organisation</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="account_name">Account Name</string>
    <string name="nfc_code">Nfc Code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="select_role">Select Role</string>
    <string name="submit_profile">Submit Profile</string>
    <string name="title_activity_role">RoleActivity</string>
    <string name="role_name">Role Name</string>
    <string name="submit_role">Submit Role</string>

    <string name="GPSAlertDialogTitle">Location not enabled</string>
    <string name="GPSAlertDialogMessage">Please enable the location from settings</string>
    <string name="cancel">Cancel</string>

</resources>
