<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">
        <TextView
            android:id="@+id/Profile"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:layout_gravity="center"
            android:textSize="10pt">
        </TextView>
        <EditText
            android:id="@+id/First_Name"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>
        <EditText
            android:id="@+id/Last_Name"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>
        <EditText
            android:id="@+id/Password"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:layout_width="375dp">
        </EditText>
        <EditText
            android:id="@+id/Account_Name"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/account_name"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>
        <EditText
            android:id="@+id/Nfc_Code"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/nfc_code"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>
        <EditText
            android:id="@+id/Mobile_Number"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>
        <Spinner
            android:id="@+id/Organisation"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:prompt="@string/select_organisation"
            android:layout_width="fill_parent">
        </Spinner>
        <Spinner
            android:id="@+id/Role"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:prompt="@string/select_role"
            android:layout_width="fill_parent">
        </Spinner>
        <Button
            android:text="@string/submit_profile"
            android:layout_margin="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit_profile" />
    </LinearLayout>
</ScrollView>
