<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollViewAsset"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Asset_View_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:text="@string/asset_details"
            android:textSize="10pt"></TextView>

        <EditText
            android:id="@+id/Asset_Name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/asset_name"
            android:inputType="textPersonName"></EditText>

        <EditText
            android:id="@+id/Asset_Description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/asset_description"
            android:inputType="textMultiLine"
            android:lines="6"></EditText>

        <EditText
            android:id="@+id/Scan_Code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:enabled="false"></EditText>

        <EditText
            android:id="@+id/Scan_Type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:enabled="false"></EditText>

        <EditText
            android:id="@+id/Asset_Owner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/owner_name"
            android:inputType="textPersonName"></EditText>

        <EditText
            android:id="@+id/employee_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/employee_name"
            android:inputType="textPersonName"></EditText>

        <Spinner
            android:id="@+id/Organisation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:prompt="@string/select_organisation"></Spinner>

        <ToggleButton
            android:id="@+id/In_Out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="true"
            android:text="@string/mark_status"
            android:textOff="@string/toggle_out"
            android:textOn="@string/toggle_in" />

        <Button
            android:id="@+id/submit_asset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/submit_asset" />
    </LinearLayout>
</ScrollView>
